syntax = "proto3";

package user.v1;

option go_package = "github.com/visionworld/user-service/proto/user/v1;user_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// 用户服务定义
service UserService {
  // 手机号登录
  rpc LoginByPhone(LoginByPhoneRequest) returns (LoginByPhoneResponse);
  
  // 退出登录
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty);
  
  // 刷新Token
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  
  // 获取用户信息
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
  
  // 更新用户信息
  rpc UpdateUserInfo(UpdateUserInfoRequest) returns (UpdateUserInfoResponse);
  
  // 获取用户列表（批量）
  rpc GetUserList(GetUserListRequest) returns (GetUserListResponse);
  
  // 检查用户状态
  rpc CheckUserStatus(CheckUserStatusRequest) returns (CheckUserStatusResponse);
  
  // 发送验证码
  rpc SendVerificationCode(SendVerificationCodeRequest) returns (SendVerificationCodeResponse);
}

// 基础枚举定义
enum UserStatus {
  USER_STATUS_UNSPECIFIED = 0;
  USER_STATUS_ACTIVE = 1;      // 正常
  USER_STATUS_DISABLED = 2;    // 禁用
  USER_STATUS_DELETED = 3;     // 已删除
}

enum Platform {
  PLATFORM_UNSPECIFIED = 0;
  PLATFORM_WEB = 1;
  PLATFORM_IOS = 2;
  PLATFORM_ANDROID = 3;
}

// 设备信息
message DeviceInfo {
  Platform platform = 1;
  string os_version = 2;
  string app_version = 3;
  string device_model = 4;
}

// Token信息
message TokenInfo {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;  // 过期时间（秒）
}

// 用户基础信息
message UserInfo {
  string user_id = 1;
  string username = 2;
  string phone = 3;  // 脱敏后的手机号
  string avatar = 4;
  UserStatus status = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  int64 follower_count = 8;   // 粉丝数
  int64 following_count = 9;  // 关注数
  int64 video_count = 10;     // 视频数
  string signature = 11;        // 个性签名
  string birthday = 12;         // 生日
  int32 gender = 13;            // 性别：0-未知，1-男，2-女
  string location = 14;         // 地区
}

// 手机号登录请求
message LoginByPhoneRequest {
  string phone = 1;
  string verification_code = 2;
  string device_id = 3;
  DeviceInfo device_info = 4;
}

// 手机号登录响应
message LoginByPhoneResponse {
  UserInfo user = 1;
  TokenInfo tokens = 2;
}

// 退出登录请求
message LogoutRequest {
  string user_id = 1;
  string device_id = 2;
}

// 刷新Token请求
message RefreshTokenRequest {
  string refresh_token = 1;
}

// 刷新Token响应
message RefreshTokenResponse {
  TokenInfo tokens = 1;
}

// 获取用户信息请求
message GetUserInfoRequest {
  string user_id = 1;
  string current_user_id = 2;  // 当前登录用户ID，用于判断是否关注
}

// 获取用户信息响应
message GetUserInfoResponse {
  UserInfo user = 1;
  bool is_followed = 2;  // 当前用户是否关注了该用户
}

// 更新用户信息请求
message UpdateUserInfoRequest {
  string user_id = 1;
  optional string username = 2;
  optional string avatar = 3;
  optional string signature = 4;
  optional string birthday = 5;
  optional int32 gender = 6;
  optional string location = 7;
}

// 更新用户信息响应
message UpdateUserInfoResponse {
  UserInfo user = 1;
}

// 获取用户列表请求
message GetUserListRequest {
  repeated string user_ids = 1;
  string current_user_id = 2;
}

// 获取用户列表响应
message GetUserListResponse {
  repeated UserInfo users = 1;
}

// 检查用户状态请求
message CheckUserStatusRequest {
  repeated string user_ids = 1;
}

// 检查用户状态响应
message CheckUserStatusResponse {
  message UserStatusInfo {
    string user_id = 1;
    UserStatus status = 2;
  }
  repeated UserStatusInfo user_statuses = 1;
}

// 发送验证码请求
message SendVerificationCodeRequest {
  string phone = 1;
  string scene = 2;  // 场景：login-登录，register-注册，reset_pwd-重置密码
}

// 发送验证码响应
message SendVerificationCodeResponse {
  bool success = 1;
  string message = 2;
  int64 expire_time = 3;  // 过期时间（秒）
}